--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "economic-dashboard-ts",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000/",
   "dependencies": {
     "@polygon.io/client-js": "^7.3.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,6 +16,7 @@
     "chart.js": "^4.4.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
